--- a/Videojuegos/Breakout/css/styles.css
+++ b/Videojuegos/Breakout/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: White;
+    background-color: #121212;
     width: 100vw;
     height: 100vh;
     box-sizing: border-box;
@@ -22,7 +22,7 @@ body {
 
 #headerContainer{
   grid-area: header;
-  background-color: darkred;
+  background-color: #8B0000;
   width: 100%;
   height: 100%;
   margin: 0;
@@ -30,19 +30,25 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-h1{
-  margin: 0px;
+h1 {
+  color: white;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 
 canvas {
     /* width: 75vw; */
     /* height: 75vh; */
-    border: 2px solid blue;
+    border: 2px solid #1E90FF;
     background-color: black;
-    /* width: 600px; */
-    /* height: 600px; */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    /*width: 600px;*/
+    /*height: 600px;*/
 }
 
 #canvas {
@@ -53,10 +59,6 @@ canvas {
 .lil-gui.autoPlace{
   top: 15vh;
   right: 5vw;
-}
-
-#backButton {
-    margin: 10px;
 }
 
 #uiContainer {
@@ -85,4 +87,14 @@ canvas {
 }
 #ui input, #ui select, #ui option, #ui canvas {
   pointer-events: auto;
+}
+
+#playAgainButton {
+  margin: 10px;
+  background-color: #32CD32;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 1rem;
 }
